searchBar images index fixed/ render align fixed

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -163,6 +163,13 @@
       text-align: center;
       position: relative;
     }
+    &__form-login:after {
+      content: '';
+      border-right: 1px solid rgba($color: #fafafa, $alpha: 0.2);
+      height: 100%;
+      position: absolute;
+      right: 0;
+    }
     &__form-register:after {
       @include for-tablet-up {
         content: '';
@@ -298,13 +305,6 @@
   }
 }
 
-.header__form-login:after {
-  content: '';
-  border-right: 1px solid rgba($color: #fafafa, $alpha: 0.2);
-  height: 100%;
-  position: absolute;
-  right: 0;
-}
 .js-navigationButtons {
   display: block;
   margin-bottom: 32px;
@@ -321,10 +321,25 @@
   color: rgba($color: #fafafa, $alpha: 0.2);
   padding: 0 11px;
 }
+// --- searchBar.hbs ---
+.search {
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  &__result {
+    font-family: 'montserratBold';
+    font-size: 24px;
+    letter-spacing: 0.32px;
+    line-height: 20px;
+    text-align: center;
 
-.categoryList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-right: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
 }
